# SLR_GraspableTargetDetection

./: README.md
coppelia_interface/: CMakeLists.txt  package.xml
coppelia_interface/include/depthimage_to_pointcloud2/: depth_conversions.hpp  depth_traits.hpp
coppelia_interface/src/: ICP copy.cpp  ICP.cpp  conversion.cpp  icp_test.cpp  publisher.cpp  subscriber_member_function.cpp
detect_graspable_points/: CMakeLists.txt  README.md  package.xml
detect_graspable_points/RVIZ/: HubRobo_RVIZ_20231201.rviz
detect_graspable_points/include/detect_graspable_points/: detect_graspable_points.hpp
detect_graspable_points/launch/: detect_graspable_points.launch  detect_graspable_points_launch.py  publish_pcd_launch.py  rviz.launch
detect_graspable_points/pcd/: graspability_map_10.pcd  graspability_map_artificial_rocks_0.pcd  graspability_map_linear_1.pcd  linear_1.pcd  linear_2.pcd  linear_3.pcd  peaks_artificial_rocks_0.pcd  peaks_linear_0.pcd  peaks_linear_2.pcd  peaks_linear_3.pcd  peaks_linear_4.pcd  peaks_linear_5.pcd
detect_graspable_points/pcd_data/: Boulder_wall_poisson.ply  ControlVolume.csv  GripperMask.csv  GripperMask_hubrobo.csv  boulder_wall_poisson.pcd  peak_pcd.pcd  scanned_cloud_primitive.pcd  simulated_cloud_pre-scan.pcd  testfield_apr8_upscaled.pcd
detect_graspable_points/pcd_data/circular_movement/: 0_-1.5_0.42.ply  concatenated_100.pcd  concatenated_50.pcd  concatenated_75.pcd  four_positions_concatenated.mlp
detect_graspable_points/pcd_data/linear_movement/: linear_cloud_-1.5.ply  linear_merge.mlp
detect_graspable_points/pcd_data/meshlab_circular/: circular_50.pcd  circular_60.pcd  circular_70.pcd  circular_80.pcd  circular_90.pcd  circular_cloud_a_0_1.5.ply  circular_cloud_b_-0.882_1.214.ply  circular_cloud_c_-1.427_0.464.ply  circular_cloud_d_-1.427_-0.464.ply  circular_cloud_e_-0.882_-1.214.ply  circular_cloud_f_0_-1.5.ply
detect_graspable_points/python/: voxel_visualization.py
detect_graspable_points/src/: detect_graspable_points.cpp  detect_graspable_points_main.cpp  publish_pointcloud2.cpp  publish_pointcloud2_b.cpp  test
detect_graspable_points/src/detect_graspable_points/: detect_graspable_points.cpp
pcl_ros/include/pcl_ros/io/: concatenate_data.hpp
testpcd/: CMakeLists.txt  package.xml
testpcd/src/: publish_pointcloud2.cpp
